syntax = "proto3";

option go_package = "github.com/ukasyah-dev/authority-service/rpc/schema";

package authority;

service Authority {
  rpc CheckPermission (CheckPermissionRequest) returns (CheckPermissionResponse) {}
}

message CheckPermissionRequest {
  string ActionID = 1;
  string TeamID = 2;
  string UserID = 3;
}

message CheckPermissionResponse {
  bool Allowed = 1;
}
